# opinion-galaxy-mvp

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Dockerfile.export  LICENSE  Makefile  README.md  app.py  cloudbuild.yaml  create_pages.py  export.py  export.sh  import.sh  litefs.yml  litestream.yml  pyproject.toml  requirements.txt  run.sh  run_dev.sh
data/: answer_by_tokyo_election_area.csv  answers.csv  comments.csv  dummy_election.csv  dummy_political_opinions_with_datetime.csv  prefectures.geojson  topics.csv  users.csv
data/predict/: best_model_for_1.pkl  candidate_embeddings.pkl  topic_embeddings.pkl
dataset/: concat_prefecture_city.sh  create_dummy_data.ipynb
dev/: Dockerfile.dev  run_dev.sh
export/: Dockerfile.export  export.py  export.sh
src/: const.py  data.py  database.py  main.py  predict.py  style.py  type.py  untils.py
src/api/driver/: __init__.py  answer.py  comment.py  topic.py  user.py
src/api/usecase/: __init__.py  answer.py  comment.py  user.py
src/components/: __init__.py  basic_info.py  basic_info_dialog.py  comment_container.py  comment_wrapper.py  footer.py  login.py  opinion_info.py  select_opinion_container.py  share_container.py  siginin_dialog.py  visualize_tabs.py
src/components/comment/: __init__.py  comment_container.py  comment_expander.py  comment_wrapper.py  reaction_columns.py
src/firebase/: __init__.py  auth.py  config.py
src/page/: __init__.py  dashboard.py  election_predict.py  template.py
src/visualize/: __init__.py  preprocess.py  show.py
